--- a/META.yml
+++ b/META.yml
@@ -24,10 +24,11 @@ no_index:
 recommends:
   Module::Build: '0.4004'
 requires:
+  CPAN::Meta::Prereqs: '2.132830'
   Exporter: '0'
   Module::CPANfile: '1.0000'
   version: '0.80'
 resources:
   bugtracker: https://github.com/debug-ito/Module-Build-Prereqs-FromCPANfile/issues
   repository: git://github.com/debug-ito/Module-Build-Prereqs-FromCPANfile.git
-version: '0.01'
+version: '0.02'
